--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
+
+.btn {
+  @apply inline-block bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 transform transition text-white font-semibold px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider text-sm sm:text-base focus:outline-none focus:ring active:bg-indigo-600;
+}
+
 @tailwind utilities;
